--- a/client/src/app/components/diseases/diseases-table/diseases-table.component.html
+++ b/client/src/app/components/diseases/diseases-table/diseases-table.component.html
@@ -15,12 +15,18 @@
         [nzSortFn]="true">
         DOID
       </th>
-      <th nzWidth="30%"
-        [nzColumnKey]="sortColumns.GeneNames"
-        [nzSortFn]="true">
+      <th nzWidth="30%">
         Genes
       </th>
-      <th nzWidth="10%"
+      <th nzWidth="8%"
+        [nzColumnKey]="sortColumns.GeneCount"
+        [nzSortFn]="true">
+        <i nz-icon
+          nzType="civic:gene"
+          nz-tooltip
+          nzTooltipTitle="Gene Count"></i>
+      </th>
+      <th nzWidth="8%"
         [nzColumnKey]="sortColumns.VariantCount"
         [nzSortFn]="true">
         <i nz-icon
@@ -28,7 +34,7 @@
           nz-tooltip
           nzTooltipTitle="Variant Count"></i>
       </th>
-      <th nzWidth="10%"
+      <th nzWidth="8%"
         [nzColumnKey]="sortColumns.EvidenceItemCount"
         [nzSortFn]="true">
         <i nz-icon
@@ -36,7 +42,7 @@
           nz-tooltip
           nzTooltipTitle="Evidence Count"></i>
       </th>
-      <th nzWidth="10%"
+      <th nzWidth="8%"
         [nzColumnKey]="sortColumns.AssertionCount"
         [nzSortFn]="true">
         <i nz-icon
@@ -64,6 +70,7 @@
       <th></th>
       <th></th>
       <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -88,6 +95,9 @@
                         {{ gene }}{{ isLast ? '' : ', ' }}
                       </span>
         </p>
+      </td>
+      <td>
+        {{ d.geneCount }}
       </td>
       <td>
         {{ d.variantCount }}
