variant & gene revise forms call new cleanup() service functions to clear behaviorSubjects

--- a/client/src/app/forms/variants/forms/variant-revise/variant-revise.form.html
+++ b/client/src/app/forms/variants/forms/variant-revise/variant-revise.form.html
@@ -47,7 +47,7 @@
   </div>
   <div nz-col nzSpan="12">
     <h4>formModel</h4>
-    <p>To speed up form updates, comment or remove formModel debug.</p>
+    <p>To speed up form updates, comment out or remove this formModel debug block.</p>
     <ngx-json-viewer *ngIf="formModel"
       [json]="formModel"></ngx-json-viewer>
   </div>
