--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,4 +2,5 @@
      main app.component delegates all app layout and routing
      to layout.component and layout-routing.module
 -->
+<cvc-network-error-alert></cvc-network-error-alert>
 <router-outlet></router-outlet>
