--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -2,5 +2,9 @@
      main app.component delegates all app layout and routing
      to layout.component and layout-routing.module
 -->
-<cvc-network-error-alert></cvc-network-error-alert>
-<router-outlet></router-outlet>
+<div class="alert-container" >
+  <cvc-network-error-alert></cvc-network-error-alert>
+</div>
+<div class="app-container" >
+  <router-outlet></router-outlet>
+</div>
