--- a/client/src/app/components/app/network-error-alert/network-error-alert.component.html
+++ b/client/src/app/components/app/network-error-alert/network-error-alert.component.html
@@ -4,17 +4,50 @@
     [nzMessage]="alertMessage"
     [nzDescription]="alertDescription"
     nzCloseable></nz-alert>
+
+  <!-- alert message title -->
   <ng-template #alertMessage>
     {{ error.name }} {{ error.status }} {{ error.statusText }}
   </ng-template>
+
+  <!-- alert message logic - one or many errors to display? -->
   <ng-template #alertDescription>
-    <ng-container *ngIf="error.error.errors.length === 1">
-      {{ error.error.errors[0].message }}
+    <ng-container *ngIf="error.error.errors as errs">
+      <ng-container *ngIf="errs.length === 1">
+        <ng-container *ngTemplateOutlet="errorDisplay; context: { error: errs[0] }">
+        </ng-container>
+      </ng-container>
+      <ng-container *ngIf="errs.length > 1">
+        <ul class="error-list">
+          <li *ngFor="let e of errs">
+            <ng-container *ngTemplateOutlet="errorDisplay; context: { error: e }">
+            </ng-container>
+          </li>
+        </ul>
+      </ng-container>
     </ng-container>
-    <ng-container *ngIf="error.error.errors.length > 1">
-      <ul class="error-list">
-        <li *ngFor="let e of error.error.errors">{{ e.message }}</li>
-      </ul>
-    </ng-container>
+  </ng-template>
+
+  <!-- alert message item -->
+  <ng-template #errorDisplay
+    let-e="error">
+    {{ e.message }}
+    <button *ngIf="e.backtrace.length > 0"
+      nz-button
+      (click)="showModal('Backtrace for \'' + e.message + '\'', e.backtrace, modalFooter, modalContent)"
+      nzSize="small"
+      nzType="link">
+      View Backtrace
+    </button>
+  </ng-template>
+
+  <!-- modal templates passed in showModal() -->
+  <ng-template #modalContent
+    let-params>
+    <pre style="white-space: pre-wrap; font-size: 80%;">{{ params.backtrace }}</pre>
+  </ng-template>
+  <ng-template #modalFooter let-ref="modalRef">
+    <button nz-button nzType="default" (click)="copyToClipboard()">Copy to Clipboard</button>
+    <button nz-button nzType="primary" (click)="hideModal(ref)">OK</button>
   </ng-template>
 </ng-container>
