adjusted layout styles to work with alert banner

--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -277,7 +277,7 @@
         </div>
       </div>
     </nz-header>
-    <nz-content class="app-content">
+    <nz-content>
       <router-outlet></router-outlet>
       <!-- <div nz-row>
            <div nz-icol nzSpan="12" >
