--- a/client/src/app/layout/layout.component.less
+++ b/client/src/app/layout/layout.component.less
@@ -103,9 +103,8 @@ nz-sider {
 nz-content {
   margin-top: @app-header-height;
   overflow: initial;
+  position: relative;
   z-index: 1;
-  // background-color: #252e36;
-  // background-color: #072b4d;
   background-color: #273340;
   border-top: 1px solid #3e5166;
   border-left: 1px solid #3e5166;
