--- a/client/src/app/forms/variant-types/types/variant-type-input/variant-type-input.type.html
+++ b/client/src/app/forms/variant-types/types/variant-type-input/variant-type-input.type.html
@@ -2,5 +2,7 @@
   <cvc-variant-type-selector (typeSelected)="onTypeSelected($event)"></cvc-variant-type-selector>
 </ng-container>
 <ng-template #typeListItem>
-  <cvc-variant-type-tag [variantType]="formControl.value"></cvc-variant-type-tag>
+  <cvc-variant-type-tag [variantType]="formControl.value"
+    [enablePopover]="false"
+    [linked]="false"></cvc-variant-type-tag>
 </ng-template>
