--- a/client/src/app/forms/variant-types/types/variant-type-input/variant-type-selector/variant-type-selector.form.html
+++ b/client/src/app/forms/variant-types/types/variant-type-input/variant-type-selector/variant-type-selector.form.html
@@ -7,5 +7,6 @@
     [fields]="fields"
     [options]="options"
     [form]="form"
+    (modelChange)="formModel = $event"
     class="formly-form"></formly-form>
 </form>
