--- a/client/src/app/forms/sources/types/source-input/source-selector/source-selector.form.html
+++ b/client/src/app/forms/sources/types/source-input/source-selector/source-selector.form.html
@@ -4,6 +4,7 @@
   (ngSubmit)="onSubmit()">
 
   <formly-form [model]="model"
+    (modelChange)="model = $event"
     [fields]="fields"
     [options]="options"
     [form]="form"
