network-errors banner clears network-error-service's replaysubject

--- a/client/src/app/components/app/network-error-alert/network-error-alert.component.html
+++ b/client/src/app/components/app/network-error-alert/network-error-alert.component.html
@@ -3,7 +3,8 @@
     nzType="error"
     [nzMessage]="alertMessage"
     [nzDescription]="alertDescription"
-    nzCloseable></nz-alert>
+    nzCloseable
+    (nzOnClose)="onClose()"></nz-alert>
 
   <!-- alert message title -->
   <ng-template #alertMessage>
