--- a/client/src/app/forms/variants/forms/variant-revise/variant-revise.form.html
+++ b/client/src/app/forms/variants/forms/variant-revise/variant-revise.form.html
@@ -40,15 +40,15 @@
     </nz-form-control>
   </nz-form-item>
 </form>
-<!-- <div nz-row>
-     <div nz-col nzSpan="12">
-     <ngx-json-viewer *ngIf="formGroup"
-     [json]="formGroup.value"></ngx-json-viewer>
-     </div>
-     <div nz-col nzSpan="12">
-     <h4>formModel</h4>
-     <p>To speed up form updates, comment out or remove this formModel debug block.</p>
-     <ngx-json-viewer *ngIf="formModel"
-     [json]="formModel"></ngx-json-viewer>
-     </div>
-     </div> -->
+<div nz-row>
+  <div nz-col nzSpan="12">
+    <ngx-json-viewer *ngIf="formGroup"
+      [json]="formGroup.value"></ngx-json-viewer>
+  </div>
+  <div nz-col nzSpan="12">
+    <h4>formModel</h4>
+    <p>To speed up form updates, comment out or remove this formModel debug block.</p>
+    <ngx-json-viewer *ngIf="formModel"
+      [json]="formModel"></ngx-json-viewer>
+  </div>
+</div>
