--- a/client/src/app/components/app/network-error-alert/network-error-alert.component.less
+++ b/client/src/app/components/app/network-error-alert/network-error-alert.component.less
@@ -4,25 +4,19 @@
   display: block;
 }
 
+.alert-container {
+  display: block;
+  width: 100%;
+  padding: @default-padding-sm @default-padding-lg;
+}
+
 :host ::ng-deep nz-alert {
-  margin: @default-padding-sm @default-padding-lg;
   .ant-alert-banner {
     border-radius: @border-radius-md;
-  }
-  .ant-alert-banner::before {
-    border: 2px solid #ff4d4f;
-    border-radius: @border-radius-md;
-    box-shadow: 0 0 20px #333;
-    mix-blend-mode: darken;
-    content: "";
-
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
+    border: 2px solid #cf1322;
   }
 }
+
 
 .error-list {
   margin: 0;
