added new variant-type icon

--- a/client/src/app/components/variant-types/variant-type-popover/variant-type-popover.component.html
+++ b/client/src/app/components/variant-types/variant-type-popover/variant-type-popover.component.html
@@ -6,7 +6,7 @@
       [nzExtra]="linkout">
       <ng-template #cardTitle>
         <i nz-icon
-          nzType="apartment"
+          nzType="civic-varianttype"
           class="variant-type-tag-icon"></i> {{ vt.name }}
       </ng-template>
       <ng-template #linkout>
