--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -133,7 +133,7 @@
         nzTooltipPlacement="right"
         [nzTooltipTitle]="isCollapsed ? 'Variant Types' : ''"
         nzSelected nzMatchRouter>
-        <i nz-icon nzType="apartment"></i>
+        <i nz-icon nzType="civic-varianttype"></i>
         <span>
           <a routerLink="/variant-types">Variant Types</a>
         </span>
