--- a/client/src/app/views/variant-types/variant-types-detail/variant-types-detail.component.html
+++ b/client/src/app/views/variant-types/variant-types-detail/variant-types-detail.component.html
@@ -4,7 +4,7 @@
     <nz-page-header-title>
       <nz-space nzDirection="horizontal">
         <nz-space-item>
-          <i nz-icon nzType="apartment"></i>
+          <i nz-icon nzType="civic:varianttype"></i>
         </nz-space-item>
         {{ variantType.name }}
       </nz-space>
