--- a/client/src/app/views/variant-types/variant-types-summary/variant-types-summary.component.html
+++ b/client/src/app/views/variant-types/variant-types-summary/variant-types-summary.component.html
@@ -3,7 +3,7 @@
     <cvc-variants-table [variantTypeId]="variantTypeId"></cvc-variants-table>
   </cvc-entity-table-card>
   <ng-template #variantTableTitle>
-    <i nz-icon nzType="apartment"></i>
+    <i nz-icon nzType="civic-varianttype"></i>
     Type Variants
   </ng-template>
   <nz-space-item>
