--- a/client/src/app/views/variant-types/variant-types-home/variant-types-home.page.html
+++ b/client/src/app/views/variant-types/variant-types-home/variant-types-home.page.html
@@ -1,6 +1,6 @@
 <nz-page-header class="site-page-header">
   <nz-page-header-title>
-    <i nz-icon nzType="apartment"></i>
+    <i nz-icon nzType="civic:varianttype"></i>
     Variant Types
   </nz-page-header-title>
 
