multi-field add-btn disabled toggle working

--- a/client/src/app/forms/shared/types/multi-field/multi-field-add-btn/multi-field-add-btn.type.html
+++ b/client/src/app/forms/shared/types/multi-field/multi-field-add-btn/multi-field-add-btn.type.html
@@ -1,4 +1,5 @@
 <button type="submit"
   nz-button
   nzType="primary"
-  nzSize="small">{{ to.label }}</button>
+  nzSize="small"
+[disabled]="to.disabled">{{ to.label }}</button>
