variant type selector form layout working with add button

--- a/client/src/app/forms/shared/types/multi-field/multi-field-add-btn/multi-field-add-btn.type.html
+++ b/client/src/app/forms/shared/types/multi-field/multi-field-add-btn/multi-field-add-btn.type.html
@@ -2,4 +2,5 @@
   nz-button
   nzType="primary"
   nzSize="small"
-[disabled]="to.disabled">{{ to.label }}</button>
+  nzBlock
+  [disabled]="to.disabled">{{ to.label }}</button>
