--- a/client/src/app/forms/variant-types/types/variant-type-input/variant-type-selector/variant-type-selector.form.less
+++ b/client/src/app/forms/variant-types/types/variant-type-input/variant-type-selector/variant-type-selector.form.less
@@ -2,22 +2,25 @@
   display: block;
 }
 
-@type-typeahead-width: 10em;
 @input-spacer: 0.5em;
-@add-button-width: 2em;
+@add-button-width: 8em;
 
 cvc-variant-type-input {
   .formly-form {
     width: 100%;
+    display: inline-block;
+    .formly-field {
+      display: inline-block;
+    }
   }
   .name-field {
     display: inline-block;
-    width: calc(~'100% - @{type-typeahead-width} - @{input-spacer} - @{add-button-width}')
+    width: calc(~'100% - @{input-spacer} - @{add-button-width}')
   }
   .add-button {
     display: inline-block;
     margin-left: @input-spacer;
-    width: @add-button-width
+    width: @add-button-width;
   }
 
 }
