submit evidence view, page, submit modules, breadcrumbs, routes working

--- a/client/src/app/views/evidence/evidence-add/evidence-add.view.html
+++ b/client/src/app/views/evidence/evidence-add/evidence-add.view.html
@@ -1,1 +1,15 @@
-<p>evidence-add works!</p>
+<cvc-section-navigation displayName="New"></cvc-section-navigation>
+<nz-page-header class="site-page-header">
+
+  <!-- title -->
+  <nz-page-header-title cvcFlaggableOptions>
+    <i nz-icon nzType="civic:evidence"></i>
+    Add Evidence
+  </nz-page-header-title>
+
+  <nz-page-header-content>
+    <div class="content">
+      <router-outlet></router-outlet>
+    </div>
+  </nz-page-header-content>
+</nz-page-header>
