--- a/client/src/app/views/evidence/evidence-add/evidence-submit/evidence-submit.page.html
+++ b/client/src/app/views/evidence/evidence-add/evidence-submit/evidence-submit.page.html
@@ -1,8 +1,6 @@
 <nz-row [nzGutter]="16">
   <nz-col nzSpan="16">
-    <p>evidence-submit form goes here.</p>
-    <!-- <cvc-variant-revise-form [variantId]="variantId">
-         </cvc-variant-revise-form> -->
+    <cvc-evidence-add-form></cvc-evidence-add-form>
   </nz-col>
   <nz-col nzSpan="8">
     <nz-card nzTitle="Instructions"
