renamed evidence-add form to evidence-submit, fixed module deps

--- a/client/src/app/views/evidence/evidence-add/evidence-submit/evidence-submit.page.html
+++ b/client/src/app/views/evidence/evidence-add/evidence-submit/evidence-submit.page.html
@@ -1,6 +1,6 @@
 <nz-row [nzGutter]="16">
   <nz-col nzSpan="16">
-    <cvc-evidence-add-form></cvc-evidence-add-form>
+    <cvc-evidence-submit-form></cvc-evidence-submit-form>
   </nz-col>
   <nz-col nzSpan="8">
     <nz-card nzTitle="Instructions"
