--- a/client/src/app/views/evidence/evidence-revise/evidence-suggest/evidence-suggest.page.html
+++ b/client/src/app/views/evidence/evidence-revise/evidence-suggest/evidence-suggest.page.html
@@ -1,1 +1,30 @@
-<p>evidence-suggest works!</p>
+<nz-row [nzGutter]="16">
+  <nz-col nzSpan="16">
+    <ng-container *ngIf="evidenceId; else loadingEvidence">
+      <p>evidenceId: {{ evidenceId }}</p>
+      <!-- <cvc-evidence-suggest-form [evidenceId]="evidenceId">
+           </cvc-evidence-suggest-form> -->
+    </ng-container>
+    <ng-template #loadingEvidence>Loading Evidence...</ng-template>
+  </nz-col>
+  <nz-col nzSpan="8">
+    <nz-card nzTitle="Instructions"
+      nz-type="inner">
+      <nz-space nzDirection="vertical"
+        style="width: 100%">
+        <nz-space-item>
+          <nz-skeleton [nzParagraph]="{ rows: 1 }"></nz-skeleton>
+        </nz-space-item>
+        <nz-space-item>
+          <nz-skeleton [nzParagraph]="{ rows: 3 }"></nz-skeleton>
+        </nz-space-item>
+        <nz-space-item>
+          <nz-skeleton [nzParagraph]="{ rows: 4 }"></nz-skeleton>
+        </nz-space-item>
+        <nz-space-item>
+          <nz-skeleton [nzParagraph]="{ rows: 5 }"></nz-skeleton>
+        </nz-space-item>
+      </nz-space>
+    </nz-card>
+  </nz-col>
+</nz-row>
