update client generated schema, country is now an object

--- a/client/src/app/views/users/users-detail/users-detail.component.html
+++ b/client/src/app/views/users/users-detail/users-detail.component.html
@@ -115,7 +115,7 @@
                           <b>Area of Expertise:&nbsp;</b>{{ user.areaOfExpertise }}
                         </nz-row>
                         <nz-row>
-                          <b>Country:&nbsp;</b>{{ user.country }}
+                          <b>Country:&nbsp;</b>{{ user.country.name }}
                         </nz-row>
                       </nz-col>
                       <nz-col [nzSpan]="6">
