--- a/client/src/app/views/evidence/evidence-revise/evidence-suggest/evidence-suggest.page.html
+++ b/client/src/app/views/evidence/evidence-revise/evidence-suggest/evidence-suggest.page.html
@@ -2,8 +2,8 @@
   <nz-col nzSpan="16">
     <ng-container *ngIf="evidenceId; else loadingEvidence">
       <p>evidenceId: {{ evidenceId }}</p>
-      <!-- <cvc-evidence-suggest-form [evidenceId]="evidenceId">
-           </cvc-evidence-suggest-form> -->
+      <cvc-evidence-revise-form [evidenceId]="evidenceId">
+      </cvc-evidence-revise-form>
     </ng-container>
     <ng-template #loadingEvidence>Loading Evidence...</ng-template>
   </nz-col>
