multi-field type now uses to.addText instead of to.label for add btn label

--- a/client/src/app/forms/shared/types/multi-field/multi-field.type.html
+++ b/client/src/app/forms/shared/types/multi-field/multi-field.type.html
@@ -12,7 +12,7 @@
           nzType="default"
           nzSize="small"
           nzSearch
-          (click)="addField($event)">Add {{ to.label }}</button>
+          (click)="addField($event)">{{ to.addText }}</button>
       </div>
 </nz-form-item>
 
