--- a/client/src/app/forms/shared/types/multi-field/multi-field.type.html
+++ b/client/src/app/forms/shared/types/multi-field/multi-field.type.html
@@ -39,7 +39,7 @@
       </div>
       <div class="field-add-btn"
         *ngIf="last">
-        <i nz-icon
+        <i nz-icon *ngIf="to.maxLength == 0 || to.maxLength! > f.model.length"
           nzType="plus-circle-o"
           (click)="addField($event)"></i>
       </div>
