created start-rating component for evidenceRating field

--- a/client/src/app/forms/sources/types/source-input/source-input.type.html
+++ b/client/src/app/forms/sources/types/source-input/source-input.type.html
@@ -4,3 +4,4 @@
 <ng-template #sourceListItem>
   <cvc-source-list-item [source]="formControl.value"></cvc-source-list-item>
 </ng-template>
+<pre>{{ model | json }}</pre>
